tests/fixtures/invalid/int_bitxor_bytes.py
# Cannot bitwise XOR Int and Bytes
x: int = 1 ^ b"hello"
